--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/script.js" defer></script>
+    <style>
+        .highlight {background-color: yellow;}
+    </style>
 </head>
 <body>
-    <img src="/thehorse.jpg" alt="cheucheu" id="cheucheu">
-    <button id="button" onclick="afficherMasquer()"></button>
+    <h1>Contrepèteries Borderline</h1>
+
+    <input type="text" id="input" placeholder="Entrez votre recherche">
+    <button id="button" ></button>
+
+    <ul id="itemList">
+        <li>Les poules du couvent couvent. Les couvents poussent.</li>
+        <li>Les fesses des nonnes sont des lanternes.</li>
+        <li>Il vaut mieux une fin horrible qu'un horaire fini.</li>
+        <li>Le lapin met la charrue devant les bœufs.</li>
+        <li>Le ministre des finances se gratte la fesse gauche.</li>
+        <li>Le plombier a mis la tuyauterie à l'envers.</li>
+        <li>Le vendeur de chaussures n'a pas sa langue dans sa poche.</li>
+        <li>Le boulanger a perdu la recette de ses baguettes.</li>
+        <li>Le chasseur a attrapé une perdrix pour le perdreau.</li>
+        <li>Le maréchal-ferrant a ferré le cheval à l'envers.</li>
+    </ul>
+
 </body>
 </html>
